--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,9 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.0",
+    "multer": "^2.0.2",
     "nodemailer": "^6.10.1",
+    "sharp": "^0.34.4",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
